objects/BBB_Year_Bill_Book_Cust_PN__c.object
<CustomObject>
    <description>Yearly bookings and billings by customer (Account) and part, includes direct and POS (indirect)</description>
    <fields>
        <fullName>APL_need_to_capture_billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APL need to capture billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name_Account_Number__c</fullName>
        <description>combination of account name and account number</description>
        <formula>Customer__r.Name   &amp; &quot; (´&quot;  &amp;  Customer__r.AccountNumber  &amp; &quot;)&quot;</formula>
        <label>Account Name (Account Number)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBB_Yearly_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>BBB Yearly External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BU_Profit_Center__c</fullName>
        <label>BU Profit Center</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_current_prior__c</fullName>
        <formula>Bill_Prior_Year_Amount_USD__c + Bill_Year_to_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Amount current prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_on_YBB__c</fullName>
        <description>This field calculates the amount on YBB records.</description>
        <formula>Bill_Prior_Year_Amount_USD__c + Bill_Year_to_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount on YBB records.</inlineHelpText>
        <label>Bill Amount on YBB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Cost_on_YBB__c</fullName>
        <description>This field calculates the Cost on the YBB record.</description>
        <formula>Bill_Prior_Year_Cost_Amount__c + Bill_Year_To_Date_Cost_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost of the YBB record.</inlineHelpText>
        <label>Bill Cost on YBB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_Amount_Document__c</fullName>
        <label>Bill Prior Year -1 Amount -Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_Amount_USD__c</fullName>
        <label>Bill Prior Year -1 Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_Cost_Amount__c</fullName>
        <label>Bill Prior Year -1 Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_Qty__c</fullName>
        <label>Bill Prior Year -1 Qty</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_to_Date_Amount_Docu__c</fullName>
        <label>Bill Prior Year -1 to Date Amount - Docu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_to_Date_Amount_USD__c</fullName>
        <label>Bill Prior Year -1 to Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_to_Date_Cost_Amount__c</fullName>
        <label>Bill Prior Year -1 to Date Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_1_to_Date_Qty__c</fullName>
        <label>Bill Prior Year -1 to Date Qty</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_Amount_Document__c</fullName>
        <inlineHelpText>Prior Year Billings in Documented Currency</inlineHelpText>
        <label>Bill Prior Year Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_Amount_USD__c</fullName>
        <inlineHelpText>Previous Year Total Sales</inlineHelpText>
        <label>Bill Prior Year Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_Cost_Amount__c</fullName>
        <inlineHelpText>Previous Year Total Sales</inlineHelpText>
        <label>Bill Prior Year Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_Qty__c</fullName>
        <description>Prior year billed qantities</description>
        <label>Bill Prior Year Qty</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_Rest_Cost_Amount__c</fullName>
        <description>calculate the prio year billings cost value based on current year cost price if the current year cost price is populated.If not used the prior year cost value.  Is used for Industrial SIP to  define prior year standard margin based on current year cost.</description>
        <formula>IF(
AND(Bill_Year_To_Date_Cost_Amount__c &lt;&gt; 0,Bill_Year_To_Date_Qty__c &lt;&gt; 0), 
Bill_Year_To_Date_Cost_Amount__c / Bill_Year_To_Date_Qty__c * Bill_Prior_Year_Qty__c,
IF(Bill_Prior_Year_Amount_USD__c &lt;&gt; 0,
IF(Current_Year_Cost_Price_USD__c &gt; 0, 
Bill_Prior_Year_Qty__c * Current_Year_Cost_Price_USD__c ,
Bill_Prior_Year_Cost_Amount__c), 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Prior Year Restated Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_To_Date_Cost_Amount__c</fullName>
        <inlineHelpText>Previous Year Sales for the time period of the current year.</inlineHelpText>
        <label>Bill Prior Year To Date Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_To_Date_Qty__c</fullName>
        <description>Billed quantities up til todays date last year</description>
        <label>Bill Prior Year To Date Qty</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_to_Date_Amount_Document__c</fullName>
        <inlineHelpText>Billings Prior Year to Current Fiscal Period in Documented Currency</inlineHelpText>
        <label>Bill Prior Year to Date Amount - Doc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Prior_Year_to_Date_Amount_USD__c</fullName>
        <inlineHelpText>Previous Year Sales for the time period of the current year.</inlineHelpText>
        <label>Bill Prior Year to Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Quantity_on_YBB__c</fullName>
        <description>This field calculates the quantity on the YBB record.</description>
        <formula>Bill_Prior_Year_Qty__c + Bill_Year_To_Date_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity of YBB record.</inlineHelpText>
        <label>Bill Quantity on YBB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Type_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Type Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Booking/Billings By Parts (Bill Type Filter)</relationshipLabel>
        <relationshipName>Booking_Billings_By_Parts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <inlineHelpText>Direct Sales / Distribution POS / CMA (Contract Manufacturer&apos;s Allocation)</inlineHelpText>
        <label>Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Year_To_Date_Cost_Amount__c</fullName>
        <label>Bill Year To Date Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Year_To_Date_Qty__c</fullName>
        <description>Billed quantities til today of this fisical year</description>
        <label>Bill Year To Date Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Year_to_Date_Amount_Document__c</fullName>
        <inlineHelpText>Billings Year to date in Documented Currency</inlineHelpText>
        <label>Bill Year to Date Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Year_to_Date_Amount_USD__c</fullName>
        <label>Bill Year to Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billings_Month_10__c</fullName>
        <description>Contains the billings for this month.</description>
        <label>Billings Month 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billings_Month_11__c</fullName>
        <label>Billings Month 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billings_Month_12__c</fullName>
        <description>Contains the billings for this month.</description>
        <label>Billings Month 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billings_YTD_vs_Month_1__c</fullName>
        <formula>IF(
 Bill_Year_to_Date_Amount_Document__c =   Billings_Month_1__c + Billings_Month_2__c + Billings_Month_3__c + Billings_Month_4__c + Billings_Month_5__c + Billings_Month_6__c + Billings_Month_7__c + Billings_Month_8__c + Billings_Month_9__c + Billings_Month_10__c + Billings_Month_11__c + Billings_Month_12__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billings YTD vs Monthly buckets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_Amount_Document__c</fullName>
        <inlineHelpText>Prior Year Bookings in Documented Currency</inlineHelpText>
        <label>Book Prior Year Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_Amount_USD__c</fullName>
        <description>Booking ammounts last year</description>
        <label>Book Prior Year Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_Cost_Amount__c</fullName>
        <inlineHelpText>Bookings Prior Year - GCS Frozen True Cost</inlineHelpText>
        <label>Book Prior Year Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_Qty__c</fullName>
        <label>Book Prior Year Qty</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_To_Date_Amount_Document__c</fullName>
        <inlineHelpText>Bookings Prior Year to the current fiscal period in Documented currency</inlineHelpText>
        <label>Book Prior Year To Date Amount - Doc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_To_Date_Amount_USD__c</fullName>
        <label>Book Prior Year To Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_To_Date_Cost_Amount__c</fullName>
        <inlineHelpText>Bookings Prior Year for Current Fiscal Period - GCS Frozen True Cost</inlineHelpText>
        <label>Book Prior Year To Date Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Prior_Year_To_Date_Qty__c</fullName>
        <label>Book Prior Year To Date Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Year_To_Date_Amount_Document__c</fullName>
        <inlineHelpText>Bookings Year to Date in Documented Currency</inlineHelpText>
        <label>Book Year To Date Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Year_To_Date_Amount_USD__c</fullName>
        <label>Book Year To Date Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Year_To_Date_Cost_Amount__c</fullName>
        <label>Book Year To Date Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Year_To_Date_Qty__c</fullName>
        <label>Book Year To Date Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBC1_Code__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC1 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC1_Description__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC1_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 1 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2_Code__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC2 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2_Description__c</fullName>
        <description>This field contains the CBC2 Description.</description>
        <formula>Part__r.Product_Hierarchy__r.CBC2_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC2 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3_Code__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC3 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3_Description__c</fullName>
        <description>This field contains the CBC3 Description.</description>
        <formula>Part__r.Product_Hierarchy__r.CBC3_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC3 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYTD_Book_Bill_Ratio__c</fullName>
        <formula>IF(OR(ISNULL(Bill_Year_to_Date_Amount_USD__c),Bill_Year_to_Date_Amount_USD__c==0),0,(Book_Year_To_Date_Amount_USD__c  /  Bill_Year_to_Date_Amount_USD__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CYTD Book Bill Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Reporting_Org__c</fullName>
        <formula>Customer__r.Company_Reporting_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Reporting Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year_Cost_Price_USD__c</fullName>
        <description>cost price of the current year per peace of the Part Number in the billing record. Manually populated with Dataloader for selected records. Used for Standard Margin restatement.</description>
        <label>Current Year Cost Price USD</label>
        <precision>18</precision>
        <scale>11</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Part__c</fullName>
        <inlineHelpText>Identified customer part number when available.</inlineHelpText>
        <label>Customer Part</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking/Billings By Parts (Customer)</relationshipLabel>
        <relationshipName>Yearly_BBB_by_Part_and_Customers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DGI__c</fullName>
        <description>DGI from part hierarchy</description>
        <formula>TEXT (Part__r.Product_Hierarchy__r.GDI_Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DGI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diff_Book_Qty__c</fullName>
        <description>calculates the difference in book qty YTD versus LYTD</description>
        <formula>Book_Year_To_Date_Qty__c -  Book_Prior_Year_To_Date_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff. Book Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_QTY__c</fullName>
        <description>Differnece between CY YTD qty -  LY YTD qty</description>
        <formula>Bill_Year_To_Date_Qty__c  -  Bill_Prior_Year_To_Date_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff. Bill QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_Value_Document_Currency__c</fullName>
        <formula>Bill_Year_to_Date_Amount_Document__c  -  Bill_Prior_Year_to_Date_Amount_Document__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Value Document Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <description>Formula field for reporting, difference between Billings CYTD to LYTD</description>
        <formula>Bill_Year_to_Date_Amount_USD__c  -  Bill_Prior_Year_to_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Bill Value USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diffrence_Book_value_USD__c</fullName>
        <formula>Book_Year_To_Date_Amount_USD__c - Book_Prior_Year_To_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Book value USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discontinued_Business_Reason__c</fullName>
        <description>a picklist to define the reason for discontinued business</description>
        <label>Discontinued Business Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>transfer to other account</fullName>
                </value>
                <value>
                    <fullName>lost to competition</fullName>
                </value>
                <value>
                    <fullName>customer EOL</fullName>
                </value>
                <value>
                    <fullName>TE EOL (obsolete)</fullName>
                </value>
                <value>
                    <fullName>transfer to Distributor (POS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <description>This field contains the related GPL.</description>
        <formula>Part__r.Product_Hierarchy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Bill__c</fullName>
        <formula>IF(OR(ISNULL(Bill_Prior_Year_to_Date_Amount_USD__c),Bill_Prior_Year_to_Date_Amount_USD__c ==0),0,((Bill_Year_to_Date_Amount_USD__c  / Bill_Prior_Year_to_Date_Amount_USD__c)-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Growth Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Growth_Book__c</fullName>
        <formula>IF(OR(ISNULL(Book_Prior_Year_To_Date_Amount_USD__c),Book_Prior_Year_To_Date_Amount_USD__c==0),0,((Book_Year_To_Date_Amount_USD__c /Book_Prior_Year_To_Date_Amount_USD__c)-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Growth Book</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IND_Profit_Centre_Groups__c</fullName>
        <description>combines  individual profit centers for Industrial into the Industriel sub vertical groups</description>
        <formula>CASE(SAP_Profit_Center_Code__c,
&apos;0000000268&apos;, &apos;A&amp;C&apos;,
&apos;0000000292&apos;, &apos;A&amp;C&apos;,
&apos;0000000266&apos;, &apos;IB&apos;,
&apos;0000000291&apos;, &apos;IB&apos;,
&apos;0000000294&apos;, &apos;IB&apos;,
&apos;0000000254&apos;, &apos;IB&apos;,
&apos;0000000412&apos;, &apos;Systems&apos;,
&apos;0000000419&apos;, &apos;Devices&apos;,
&apos;0000000418&apos;, &apos;Systems&apos;,
&apos;0000000265&apos;, &apos;Rail&apos;,
&apos;0000000293&apos;, &apos;Rail&apos;,
&apos;0000000290&apos;, &apos;Rail&apos;, &apos;&apos;)</formula>
        <label>IND Profit Centre Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_SIP_Profit_Center__c</fullName>
        <description>used for IND SIP</description>
        <formula>CASE( SAP_Profit_Center_Short_Description__c , &quot;IND Systems&quot;, &quot;Systems&quot;, &quot;IND Devices&quot;, &quot;Devices&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IND SIP Profit Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_12_months__c</fullName>
        <label>Initial 12 months</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LYTD_Book_Bill_Ratio__c</fullName>
        <formula>IF(OR(ISNULL( Bill_Prior_Year_to_Date_Amount_USD__c ),Bill_Prior_Year_to_Date_Amount_USD__c==0),0,(Book_Prior_Year_To_Date_Amount_USD__c /Bill_Prior_Year_to_Date_Amount_USD__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LYTD Book Bill Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Load Status</label>
        <referenceTo>Load_Status__c</referenceTo>
        <relationshipLabel>Yearly Booking/Billings By Parts</relationshipLabel>
        <relationshipName>Booking_Billings_By_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark a record to be deleted. Any record marked true should not be used anywhere</description>
        <inlineHelpText>If checked the record will be deleted from the system</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLM_ID__c</fullName>
        <description>PLM ID from part master</description>
        <formula>Part__r.PLM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <description>This field contains the part description.</description>
        <formula>Part__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number_Text__c</fullName>
        <description>This field contains part number</description>
        <formula>Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>TCPN</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipName>Yearly_BBB</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price_Error__c</fullName>
        <description>check box to identify records with a pricing error e.g. a billing record without cost. Required to exclude erroneous record from IND SIP margin calculations</description>
        <formula>IF(AND( Bill_Prior_Year_Amount_USD__c &lt;&gt; 0, Bill_Prior_Year_Cost_Amount__c = 0),TRUE,
IF(AND( Bill_Prior_Year_Amount_USD__c = 0, Bill_Prior_Year_Cost_Amount__c &lt;&gt; 0),TRUE,
IF(AND( Bill_Year_to_Date_Amount_USD__c &lt;&gt; 0,  Bill_Year_To_Date_Cost_Amount__c = 0),TRUE,
IF(AND( Bill_Year_to_Date_Amount_USD__c = 0,  Bill_Year_To_Date_Cost_Amount__c &lt;&gt; 0),TRUE,
FALSE))))</formula>
        <label>Price Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Billings_Cost_Price__c</fullName>
        <formula>Bill_Prior_Year_Cost_Amount__c / Bill_Prior_Year_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Year Billings Cost Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Bookings_Margin__c</fullName>
        <description>This formula calculates the &quot;prior year&quot; bookings margin.</description>
        <formula>IF(Book_Prior_Year_Amount_USD__c &gt; 0, (Book_Prior_Year_Amount_USD__c - Book_Prior_Year_Cost_Amount__c) / Book_Prior_Year_Amount_USD__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Year Bookings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prior_Year_to_Date_Billings_Margin__c</fullName>
        <description>This formula calculates the &quot;prior year to date&quot; billings margin.</description>
        <formula>IF(Bill_Prior_Year_to_Date_Amount_USD__c &gt; 0, (Bill_Prior_Year_to_Date_Amount_USD__c - Bill_Prior_Year_To_Date_Cost_Amount__c) / Bill_Prior_Year_to_Date_Amount_USD__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Year to Date Billings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prior_Year_to_Date_Bookings_Margin__c</fullName>
        <description>This formula calculates the &quot;prior year to date&quot; bookings margin.</description>
        <formula>(Book_Prior_Year_To_Date_Amount_USD__c - Book_Prior_Year_To_Date_Cost_Amount__c) / Book_Prior_Year_To_Date_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Year to Date Bookings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Regain_Business_Action_Year__c</fullName>
        <description>shows the year of the &quot;Regain Business&quot; activity as we lost the business the year before</description>
        <label>Regain Business Action Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reseller_Account_Name_Account_Number__c</fullName>
        <formula>Reseller_Customer__r.Account_Combined_Data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Account Name (Account Number)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Reseller Customer Account for each sales Record. There can be multiple Resellers per OEM customer</description>
        <inlineHelpText>Lookup to the Reseller Customer Account for each sales record.</inlineHelpText>
        <label>Reseller Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Yearly_BBB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Code_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Profit Center Code Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Booking/Billings By Parts (SAP Profit Center Code Filter)</relationshipLabel>
        <relationshipName>Booking_Billings_By_Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Code__c</fullName>
        <label>SAP Profit Center Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Group_Code_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Profit Center Group Code Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Booking/Billings By Parts (SAP Profit Center Group Code Filter)</relationshipLabel>
        <relationshipName>Booking_Billings_By_Parts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Group_Code__c</fullName>
        <label>SAP Profit Center Group Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Group_Short_Desc_Filte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SAP Profit Center Group Short Description Filter</description>
        <label>SAP Profit Center Group Short Desc Filte</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Booking/Billings By Parts (SAP Profit Center Group Short Desc Filte)</relationshipLabel>
        <relationshipName>Booking_Billings_By_Parts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Group_Short_Desc__c</fullName>
        <description>SAP Profit Center Group Short Description</description>
        <label>SAP Profit Center Group Short Desc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Short_Desc_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SAP Profit Center Short Description Filter</description>
        <label>SAP Profit Center Short Desc Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Booking/Billings By Parts</relationshipLabel>
        <relationshipName>Booking_Billings_By_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Short_Description__c</fullName>
        <label>SAP Profit Center Short Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>